hpa-kustomize-ingressNginx/increase_replicas_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
spec:
  replicas: 3
