hpa-kustomize-ingressNginx/set_memory_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
spec:
  template:
    spec:
      containers:
      - name: hello-v1
        resources:
          limits:
            memory: 512Mi
            cpu: 250m
          requests: 
            cpu: 250m
            memory: 128Mi
