hpa-kustomize-ingressNginx/php-apache-service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
  selector:
    role: php-apache
